--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Text file stuff
+/*.txt
+
+#region Node.gitignore
 # Logs
 logs
 *.log
@@ -128,3 +132,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+#endregion
